Added microposts feature, input validation and display first post for every user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,14 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <strong>First Post:</strong>
+  <%if @user.microposts.empty? %>
+    <p>"No posts yet"</p>
+  <% else %>
+    <p><%= @user.microposts.first.content %></p>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
