Added UI to the site

--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<%= link_to 'New Micropost', new_micropost_path %> |
+<%= link_to 'Back to Users', users_path %>
