--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,4 +26,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path %> |
+<%= link_to 'Go to Microposts', microposts_path %>
