--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,5 +19,8 @@
   <% end %>
 </p>
 
+<p><%= link_to 'New Post', new_micropost_path %></p>
+
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
